<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        android:paddingBottom="50dp"
        android:contentDescription="@string/profile_image" />

    <ImageView
        android:id="@+id/profile_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="295dp"
        tools:layout_editor_absoluteY="242dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/profile_avatar" />

    <TextView
        android:id="@+id/profile_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nick_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="263dp"
        app:layout_constraintTop_toTopOf="@+id/profile_avatar"
        app:layout_constraintEnd_toStartOf="@id/profile_avatar"/>
</androidx.constraintlayout.widget.ConstraintLayout>