<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/content_linear_layout"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/avatar" />

    <RelativeLayout
        android:id="@+id/content_linear_layout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/content"
            android:textColor="@color/black"
            android:layout_below="@+id/user_name"/>

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:numColumns="3"
            android:scrollbars="none"
            android:layout_below="@id/content_text_view"/>

<!--        <ListView-->
<!--            android:id="@+id/list_view"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_below="@id/grid_view"/>-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grid_view"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>